'Strikethrough' editing command reported as 'formatUnderline' https://bugs.webkit.org/show_bug.cgi?id=203944

Reviewed by Adrian Perez de Castro.

Source/WebCore:

Add an EditAction for strikeThrough command.

Test: fast/events/input-events-strikethrough-type.html

* editing/EditAction.cpp:
(WebCore::undoRedoLabel): Handle StrikeThrough action.
* editing/EditAction.h:
* editing/EditCommand.cpp:
(WebCore::inputTypeNameForEditingAction): Ditto.
* editing/EditorCommand.cpp:
(WebCore::executeStrikethrough): Use StrikeThrough action instead of Underline.

LayoutTests:

* fast/events/input-events-strikethrough-type-expected.txt: Added.
* fast/events/input-events-strikethrough-type.html: Added.

Canonical link: https://commits.webkit.org/217327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252233 268f45cc-cd09-0410-ab3c-d52691b4dbfc